--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,6 +13,13 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+go-bet_darwin_arm64
+go-bet_linux_386
+go-bet_windows_386
+config.json
 
-# Go workspace file
-go.work
+.idea
+xmd/test.go
+build.sh
+xmd/secret.go
+data.json
